--- a/src/components/Layout/Header/header.module.scss
+++ b/src/components/Layout/Header/header.module.scss
@@ -4,14 +4,17 @@
 
 .headerContent {
   height: 35px;
-  background: rgb(226, 111, 50);
-  background: linear-gradient(
-    90deg,
-    rgba(226, 111, 50, 1) 43%,
-    rgba(230, 84, 7, 1) 83%
-  );
   padding: 10px 35px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  h1 {
+    color: white;
+  }
+
+  .span {
+    color: white;
+    margin-right: 7px;
+  }
 }
