feat: Add DataForm

--- a/src/components/Layout/Footer/footer.module.scss
+++ b/src/components/Layout/Footer/footer.module.scss
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 35px;
 }
 
 .title {
+  font-size: 27px;
   color: white;
 }
