--- a/src/pages/User/user.module.scss
+++ b/src/pages/User/user.module.scss
@@ -2,5 +2,33 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center
+  align-items: center;
+}
+
+.bntCollapsed {
+  font-size: 16px;
+  width: 64px;
+  height: 64px;
+}
+
+.btnRecord {
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  &:hover {
+    color: blue;
+  }
+}
+
+.addUser {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+
+.userHeader {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0;
 }
