chore: minor changes

--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -1,8 +1,8 @@
 .overlay {
-  margin-top: 20px;
-  margin-bottom: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
 
   .contentBox {
     text-align: center;
