--- a/src/components/Layout/Header/header.module.scss
+++ b/src/components/Layout/Header/header.module.scss
@@ -18,3 +18,18 @@
     margin-right: 7px;
   }
 }
+
+.userImage {
+  margin-right: 5px;
+}
+
+.userHeader {
+  // height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  background: white;
+  justify-content: space-between;
+  padding: 0 40px;
+  padding-left: 0px;
+}
