--- a/src/pages/User/user.module.scss
+++ b/src/pages/User/user.module.scss
@@ -15,6 +15,7 @@
   border: none;
   background-color: white;
   cursor: pointer;
+  margin-bottom: 5px;
   &:hover {
     color: blue;
   }
@@ -24,11 +25,5 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 5px;
-}
-
-.userHeader {
-  height: 40px;
-  display: flex;
-  align-items: center;
-  padding: 0;
+  border-bottom: 1px solid #d6d6d6;
 }
