--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -1,72 +1,72 @@
-.overlay {
+// .overlay {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   height: 100vh;
+
+.contentBox {
+  text-align: center;
+  background: rgb(207, 206, 215);
+  background: linear-gradient(
+    90deg,
+    rgba(207, 206, 215, 1) 13%,
+    rgba(149, 164, 167, 1) 83%
+  );
+  padding: 20px;
+  border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  width: 250px;
 
-  .contentBox {
-    text-align: center;
-    background: rgb(207, 206, 215);
-    background: linear-gradient(
-      90deg,
-      rgba(207, 206, 215, 1) 13%,
-      rgba(149, 164, 167, 1) 83%
-    );
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-
-    .userName {
-      h1 {
-        margin-bottom: 7px;
-      }
-
-      input {
-        width: 220px;
-        margin-bottom: 7px;
-      }
-
-      p {
-        color: red;
-        margin: 0;
-      }
+  .userName {
+    h1 {
+      margin-bottom: 7px;
     }
 
-    .password {
-      h1 {
-        margin-top: 4px;
-        margin-bottom: 5px;
-      }
-      input {
-        width: 220px;
-        margin-bottom: 10px;
-      }
-      p {
-        color: red;
-        margin: 0;
-      }
+    input {
+      width: 220px;
+      margin-bottom: 7px;
     }
 
-    .logBtn {
-      margin-top: 10px;
+    p {
+      color: red;
+      margin: 0;
+    }
+  }
+
+  .password {
+    h1 {
+      margin-top: 4px;
+      margin-bottom: 5px;
+    }
+    input {
+      width: 220px;
       margin-bottom: 10px;
     }
+    p {
+      color: red;
+      margin: 0;
+    }
+  }
 
-    .autoBlockText {
-      cursor: pointer;
+  .logBtn {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 
-      p {
-        span {
-          font-style: italic;
-          font-weight: 600;
-          margin-left: 7px;
-          color: green;
-        }
+  .autoBlockText {
+    cursor: pointer;
+
+    p {
+      span {
+        font-style: italic;
+        font-weight: 600;
+        margin-left: 7px;
+        color: green;
       }
     }
   }
 }
+// }
