feat: Add Edit & Edit-Modal

--- a/src/pages/User/user.module.scss
+++ b/src/pages/User/user.module.scss
@@ -27,3 +27,12 @@
   margin-bottom: 5px;
   border-bottom: 1px solid #d6d6d6;
 }
+
+.plusIconBtn {
+  text-align: -webkit-right;
+  border-bottom: 1px solid rgb(231, 221, 221);
+
+  Button {
+    margin-bottom: 5px;
+  }
+}
