--- a/src/components/Layout/Header/header.module.scss
+++ b/src/components/Layout/Header/header.module.scss
@@ -33,3 +33,13 @@
   padding: 0 40px;
   padding-left: 0px;
 }
+
+.headerBtn {
+  font-size: 16px;
+  width: 64px;
+  height: 64px;
+}
+
+.plusIconBtn {
+  margin-right: 10px;
+}
