--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 
 body {
+  padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16,7 +17,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 .container {
   min-height: 100vh;
